spacing issue

--- a/src/edithome.css
+++ b/src/edithome.css
@@ -116,7 +116,7 @@ html, body {
   }
 
   .subtext{
-    text-align: center;
+    text-align: left;
   }
 }
 
