--- a/src/editprojects.css
+++ b/src/editprojects.css
@@ -166,6 +166,5 @@
 
   .project-card {
     width: 150%; 
-    text-align: left;
   }
 }
